String.prototype.replace incorrectly applies "special replacement parameters" when passed a function https://bugs.webkit.org/show_bug.cgi?id=170151

Reviewed by Saam Barati.

This patch fixes issue for String.prototype.replace when passed a function
with special symbols "$$". It happeneds because substituteBackreferences applies
unconditionally, but according to the spec it should be applied only for text
21.1.3.16.8 https://tc39.github.io/ecma262/#sec-string.prototype.replace

Source/JavaScriptCore:
* runtime/StringPrototype.cpp:
(JSC::replaceUsingStringSearch):

LayoutTests:
* js/script-tests/string_replace_function.js: Added.
* js/script-tests/string_replace_regexp.js: Renamed from LayoutTests/js/script-tests/string_replace.js.
* js/string_replace_function-expected.txt: Added.
* js/string_replace_function.html: Copied from LayoutTests/js/string_replace.html.
* js/string_replace_regexp-expected.txt: Renamed from LayoutTests/js/string_replace-expected.txt.
* js/string_replace_regexp.html: Renamed from LayoutTests/js/string_replace.html.

Canonical link: https://commits.webkit.org/187249@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214662 268f45cc-cd09-0410-ab3c-d52691b4dbfc